# rs-consul

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: clabot.yml  format-code.yml  lint.yml  main.yml  publish.yml  rustls.yml
consul-derive/: Cargo.toml
consul-derive/src/: lib.rs
examples/: create_acl_policy.rs  create_acl_token.rs  delete_acl_token.rs  deregister_service.rs  get_acl_policies.rs  get_acl_tokens.rs  lock.rs  lock_key.rs  read_token.rs  register_service.rs
src/: acl.rs  acl_types.rs  errors.rs  hyper_wrapper.rs  lib.rs  lock.rs  metrics.rs  types.rs  utils.rs
testdata/: config.hcl
tests/: test_runner.rs
tests/utils/: test_setup.rs
