[package]
name = "rs-consul"
version = "0.7.0"
authors = ["Roblox"]
edition = "2021"
description = "This crate provides access to a set of strongly typed apis to interact with consul (https://www.consul.io/)"
readme = "README.md"
repository = "https://github.com/Roblox/rs-consul"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rustls-native"]
metrics = ["prometheus", "lazy_static"]
rustls-native = ["hyper-rustls/rustls-native-certs"]
rustls-webpki = ["hyper-rustls/webpki-roots"]
trace = ["dep:opentelemetry"]

# keep this list sorted!
[dependencies]
base64 = "0.22"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27" }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http2"] }
lazy_static = { version = "1", optional = true }
opentelemetry = { version = "0.23", optional = true }
prometheus = { version = "0.13", optional = true }
quick-error = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog-scope = "4"
smart-default = "0.7"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2", features = ["json"] }
