[package]
name = "rs-consul"
# Don't forget to update the readme with the new version!
version = "0.9.0"
authors = ["Roblox"]
edition = "2021"
description = "This crate provides access to a set of strongly typed apis to interact with consul (https://www.consul.io/)"
readme = "README.md"
repository = "https://github.com/Roblox/rs-consul"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
metrics = []
trace = ["dep:opentelemetry"]

# keep this list sorted!
[dependencies]
base64 = "0.22"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "ring", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http2"] }
opentelemetry = { version = "0.28", optional = true }
quick-error = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog-scope = "4"
smart-default = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"  # Explicitly add if missing
ureq = { version = "3", features = ["json"] }
