[package]
name = "rs-consul"
# Don't forget to update the readme with the new version!
version = "0.11.0"
authors = ["Roblox"]
edition = "2024"
description = "This crate provides access to a set of strongly typed apis to interact with consul (https://www.consul.io/)"
readme = "README.md"
repository = "https://github.com/Roblox/rs-consul"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
acl = []
metrics = []
trace = ["dep:opentelemetry"]

# keep this list sorted!
[dependencies]
base64 = "0.22"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "ring", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http2"] }
opentelemetry = { version = "0.28", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog-scope = "4"
smart-default = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"  # Explicitly add if missing

# The following examples are require `acl` feature 
[[example]]
name = "create_acl_policy"
path = "examples/create_acl_policy.rs"
required-features = ["acl"]

[[example]]
name = "create_acl_token"
path = "examples/create_acl_token.rs"
required-features = ["acl"]

[[example]]
name = "delete_acl_token"
path = "examples/delete_acl_token.rs"
required-features = ["acl"]

[[example]]
name = "deregister_service"
path = "examples/deregister_service.rs"
required-features = ["acl"]

[[example]]
name = "get_acl_policies"
path = "examples/get_acl_policies.rs"
required-features = ["acl"]

[[example]]
name = "get_acl_tokens"
path = "examples/get_acl_tokens.rs"
required-features = ["acl"]

[[example]]
name = "read_token"
path = "examples/read_token.rs"
required-features = ["acl"]
